@@ -19,6 +19,7 @@ Enhancements::
 Bug Fixes::
 
 * fix position of background color on caption with outside margin (#2271)
+* don't allow font scale to compound when entering nested table (#2276)
 
 == 2.1.4 (2022-06-26) - @mojavelinux
 
